substrate/frame/election-provider-support/solution-type/tests/ui/fail/swap_voter_target.stderr
error: Expected `VoterIndex`
  --> tests/ui/fail/swap_voter_target.rs:21:2
   |
21 |     TargetIndex = u16,
   |     ^^^^^^^^^^^
